style.css
body {
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: top left;
  background-attachment: fixed;
  margin-left: 2vh;
  margin-right: 0;
  padding-right: 0;
}

h1 {
  font-family: Arial, sans-serif;
  color: #000000;
  background-color: #ffffff;
}

p {
  font-family: Georgia, serif;
  font-size: 14px;
  font-style: normal;
  font-weight: normal;
  color: #000000;
  background-color: #ffffff;
}

button {
  border: 0;
  font-size: medium;
  margin: .25em;
}

.right-image {
  max-height: 60vh;
  float: right;
}

@media only screen and (max-width: 768px) {
  .right-image {
    max-width: 25vh;
  }
}

